fix: add security to all endpoints
